--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <script src="script.js"></script>
+<!--    <script src="script.js"></script>-->
+    <script src="script2.js"></script>
 </head>
 <body>
 
