--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Title</title>
 
 <!--    <script src="script.js"></script>-->
-    <script src="script2.js"></script>
+<!--    <script src="script2.js"></script>-->
+    <script src="script2.2.js"></script>
 </head>
 <body>
 
