--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <script src="script5lesson.js"></script>
+    <script src="scriptex5hard.js.js"></script>
 </head>
 <body>
 
