--- a/7 lesson/d33f3c1bbda2989cdc85489b22e9ddb0/index.html
+++ b/7 lesson/d33f3c1bbda2989cdc85489b22e9ddb0/index.html
@@ -127,6 +127,6 @@
 
 </section>
 <!--<script src="./script/oop.js"></script>-->
-<script src="./script/script.js"></script>
+<script src="./7lesson2hard.js"></script>
 </body>
 </html>
