--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <script src="script.js"></script>
+    <script src="7lesson2hard.js"></script>
 </head>
 <body>
 
