--- a/7 lesson/d33f3c1bbda2989cdc85489b22e9ddb0/index.html
+++ b/7 lesson/d33f3c1bbda2989cdc85489b22e9ddb0/index.html
@@ -55,7 +55,7 @@
 
             <div class="deposit">
                 <label class="deposit-label title">Депозит
-                    <input id="deposit-check" type="checkbox">
+                    <input id="deposit\check" type="checkbox">
                     <span class="deposit-checkmark"></span>
                 </label>
                 <select class="deposit-bank">
@@ -127,6 +127,6 @@
 
 </section>
 <!--<script src="./script/oop.js"></script>-->
-<script src="./7lesson2hard.js"></script>
+<script src="./img/7lesson2hard.js"></script>
 </body>
 </html>
