--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <script src="7lesson2hard.js"></script>
+    <script src="7%20lesson/d33f3c1bbda2989cdc85489b22e9ddb0/img/7lesson2hard.js"></script>
 </head>
 <body>
 
